	PR c++/60228 	* parser.c (cp_parser_omp_declare_reduction_exprs): If 	processing_template_decl, wrap the combiner or initializer 	into EXPR_STMT. 	* decl.c (start_preparsed_function): Don't start a lambda scope 	for DECL_OMP_DECLARE_REDUCTION_P functions. 	(finish_function): Don't finish a lambda scope for 	DECL_OMP_DECLARE_REDUCTION_P functions, nor cp_fold_function 	them nor cp_genericize them. 	* mangle.c (decl_mangling_context): Look through 	DECL_OMP_DECLARE_REDUCTION_P functions. 	* semantics.c (expand_or_defer_fn_1): For DECL_OMP_DECLARE_REDUCTION_P 	functions, use tentative linkage, don't keep their bodies with 	-fkeep-inline-functions and return false at the end.

* g++.dg/gomp/openmp-simd-2.C: Don't expect bodies for
	DECL_OMP_DECLARE_REDUCTION_P functions.

	* testsuite/libgomp.c++/udr-20.C: New test.
	* testsuite/libgomp.c++/udr-21.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@278831 138bc75d-0d04-0410-961f-82ee72b054a4